@@ -1,8 +1,12 @@
 			   XPCE ChangeLog
 			   ==============
 
+* ENHANCED: PceEmacs colouring: more aggressive colouring of the current
+  clause.
+
 * ADDED: Bug#136: actually use directory argument in display<-win_directory.
   Holger Kanwischer.
+
 
 VERSION 6.6.1, distributed with SWI-Prolog 5.6.1
 ================================================
